Ajusta React para refletir layout legado e integra historico/autenticacao